--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,4 +12,6 @@ jobs:
         uses: actions/checkout@v4
       - name: Run a one-line script
         run: echo "Hello,world!"
+      - name: echo MY_SECRET
+        run: echo ${{ secrets.MY_SECRET }}
       
