--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,9 @@ jobs:
         uses: actions/checkout@v4
       - name: Run a one-line script
         run: echo "Hello,world!"
-      - name: echo MY_SECRET
-        run: echo ${{ secrets.MY_SECRET }}
+      - name: echo MY_VAR
+        env:
+          MY_VAL_VAR: ${{ env.MY_VAR }}
+        run:
+          echo $MY_VAL_VAR
       
