--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,6 @@ jobs:
       - name: echo MY_VAR
         env:
           MY_VAL_VAR: ${{ env.MY_VAR }}
-        run:
+        run: |
           echo $MY_VAL_VAR
       
