--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         run: echo "Hello,world!"
       - name: echo MY_VAR
         env:
-          MY_VAL_VAR: ${{ env.MY_VAR }}
+          MY_VAL_VAR: ${{ vars.MY_VAR }}
         run: |
           echo '$MY_VAL_VAR'
       
